# data-server

./: .azure-pipelines.yml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  azure-pipelines.yml  renovate.json
.circleci/: config.yml
.github/workflows/: test.yml
script/: build  dev
src/: lib.rs  main.rs  routes.rs
src/routes/: healthz.rs  ping.rs
tests/: main.rs  ping_pong.rs
tests/routes/: healthz.rs  mod.rs  ping.rs
