[package]
name = "data_server"
edition = '2018'
publish = false
version = "0.0.0-alpha.0"

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

[dev-dependencies]
mocktopus = "0.7.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fp-ds"
path = "src/main.rs"
